Fixed dropdown menu darkmode. Fixed hero image misalignment in smaller screens

--- a/src/components/Components.module.css
+++ b/src/components/Components.module.css
@@ -153,6 +153,7 @@
   max-width: 100%;
   object-fit: contain;
   height: auto;
+  align-self: flex-end; 
 }
 
 /* Footer */
